syntax="proto3";

package tokenissuer;

option go_package = "./pb/tokenissuerpb";

service TokenVerifier{
    rpc Verify(VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
    string access_token = 1;
    string token_type = 2;
}

message VerifyResponse {
    string subject_id = 1;
    string name = 2;
    string email = 3;
}
